# vibe

session1/: index.html  instruct.txt  session1_summary.html  similarity.py
session2/: index.html  instruct.txt
session3/: index.html  instruct.txt
session4/: index.html  index1.html
session4/hello/: README.md  pyproject.toml
session4/hello/src/hello/: crew.py  main.py
session4/rag/: env.sh  load.py  server_rerank_chat.py
session5/: conditional.py  hitl.py  index.html
session6/: index.html  tool_chat.py  tools_exp.py
session7/: agent_workflow.py  ig_agent_workflow.py  index.html  mcp_cli.py  weather-and-air-quality.py
session8/: agent_workflow.py  out.md
session9/: .env  graph.py  indexr.py  langgraph.json  multiagv2faiss_persisted.py  multiagv3faiss_persisted.py  readme.md
session9/faisss/: index.pkl
