[project]
name = "hello"
version = "0.1.0"
description = "hello using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
hello = "hello.main:run"
run_crew = "hello.main:run"
train = "hello.main:train"
replay = "hello.main:replay"
test = "hello.main:test"
run_with_trigger = "hello.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
